# main/http_server/axe-os/src/app/services/system.service.ts
@@ -78,6 +78,7 @@ export class SystemApiService {
         maxAllocHeap: 90000,
         coreVoltage: 1200,
         coreVoltageActual: 1200,
+        asicJobInterval: 30000,
         hostname: "Bitaxe",
         macAddr: "2C:54:91:88:C9:E3",
         ssid: "default",
@@ -169,7 +170,7 @@ export class SystemApiService {
         actualFrequency: 485,
         version: "v2.12.0",
         axeOSVersion: "v2.12.0",
-        idfVersion: "v5.5.1",
+        idfVersion: "v6.1",
         resetReason: "Power-on reset",
         boardVersion: "602",
         display: "SSD1306 (128x32)",
